[SPV175] Update visual rects when printing

Printing can change layout and we should update visual rects when this occurs.
After [1], visual rects are used for clipping which exposed a bug where painting
occurred with stale visual rects (the skia rtree is not used when printing which
would have exposed this in SPV1). This patch fully enables the paint
invalidation step to reduce special-cases in the document lifecycle, even though
only the visual rect update is strictly needed.

[1] https://chromium.googlesource.com/chromium/src/+/0256a765e5f413790ec47e7f72cd2b64ccdd0a51 [formerly b7e8c6eb13e6eb297747b9e394854408b3f29195]

Bug: 824031
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I0b9b358b078fa15b4aa1c26b494c213d62e571c4
Reviewed-on: https://chromium-review.googlesource.com/993700
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547881}
Former-commit-id: 3e0db4628329fa2944926ea9a170a81e3ccbefe7